# isaac-sim-franka

./: .env  .gitignore  .gitmodules  README.md  isaac  launcher.py  requirements.txt
assets/scenes/: franka_panda_solo.usd
launcher/: __init__.py  __main__.py  franka.py
ros_ws/: defaults.yaml
ros_ws/src/franka_demo/: CMakeLists.txt  package.xml
ros_ws/src/franka_demo/launch/: demo.launch.py  joint_state_publisher.launch.py
ros_ws/src/franka_demo/urdf/end_effectors/common/: ee_with_one_link.xacro  franka_hand.xacro  utils.xacro
ros_ws/src/franka_demo/urdf/end_effectors/franka_hand/: franka_hand.urdf.xacro  franka_hand_arguments.xacro
ros_ws/src/franka_demo/urdf/robot/common/: franka_arm.xacro  franka_robot.xacro  utils.xacro
ros_ws/src/franka_demo/urdf/robot/panda/: dynamics.yaml  joint_limits.yaml  kinematics.yaml  panda.urdf.xacro
ros_ws/src/panda_moveit_config/: .setup_assistant  package.xml
ros_ws/src/panda_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  panda.ros2_control.xacro  panda.srdf  panda.urdf.xacro  ros2_controllers.yaml  sensors_3d.yaml
scripts/: install_libfranka.sh
