<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>franka_demo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="franklinselva10@gmail.com">franklinselva</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>ros2_controllers</depend>
  <depend>ros2_control</depend>
  <depend>controller_manager</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>generate_parameter_library</depend>
  <depend>joint_state_publisher</depend>
  <depend>moveit</depend>
  <depend>pinocchio</depend>
  <depend>realtime_tools</depend>
  <depend>xacro</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
